--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -5,7 +5,7 @@
         <input type="search" placeholder="Search here..." />
     </div>
     <div class="right">
-        <div class="not">not</div>
+        <img src="" alt="" style="height: 30px; width: 30px;">
         <div class="user">
             <div class="dp">{{user?.name?.[0] ?? "I"}}</div>
             <div class="user_details">
