--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -6,31 +6,31 @@
     <ul class="menu">
         <a [routerLink]="'/'">
             <li (click)="setCurrentItem('Home')" [class.active]="currentItem === 'Home'" class="menu_item">
-                <div class="icon">i</div>
+                <img src="./icons/home.svg" style="height: 30px; width: 30px; object-fit: contain;">
                 <span>Home</span>
             </li>
         </a>
         <a [routerLink]="'/messages'">
             <li (click)="setCurrentItem('Messages')" [class.active]="currentItem === 'Messages'" class="menu_item">
-                <div class="icon">i</div>
+                <img src="./icons/messages.svg" style="height: 30px; width: 30px; object-fit: contain;">
                 <span>Messages</span>
             </li>
         </a>
         <a [routerLink]="'/block-list'">
             <li (click)="setCurrentItem('Blocked')" [class.active]="currentItem === 'Blocked'" class="menu_item">
-                <div class="icon">i</div>
+                <img src="./icons/block-list.svg" style="height: 30px; width: 30px; object-fit: contain;">
                 <span>Blocked List</span>
             </li>
         </a>
         <a [routerLink]="'/devices'">
             <li (click)="setCurrentItem('Devices')" [class.active]="currentItem === 'Devices'" class="menu_item">
-                <div class="icon">i</div>
+                <img src="./icons/home.svg" style="height: 30px; width: 30px; object-fit: contain;">
                 <span>Devices</span>
             </li>
         </a>
         <a [routerLink]="'/chatbot/analytics'">
             <li (click)="setCurrentItem('Chatbots')" [class.active]="currentItem === 'Chatbots'" class="menu_item">
-                <div class="icon">i</div>
+                <img src="./icons/home.svg" style="height: 30px; width: 30px; object-fit: contain;">
                 <span>Chatbots</span>
             </li>
         </a>
@@ -38,41 +38,41 @@
             <a [routerLink]="'/chatbot/analytics'">
                 <li (click)="setCurrentSubItem('Analytics')" [class.active]="currentSubItem === 'Analytics'"
                     class="sub_menu_item">
-                    <div class="icon">i</div>
+                    <img src="./icons/home.svg" style="height: 30px; width: 30px; object-fit: contain;">
                     <span>Analytics</span>
                 </li>
             </a>
             <a [routerLink]="'/chatbot/chat-flow'">
                 <li (click)="setCurrentSubItem('Chat')" [class.active]="currentSubItem === 'Chat'"
                     class="sub_menu_item">
-                    <div class="icon">i</div>
+                    <img src="./icons/home.svg" style="height: 30px; width: 30px; object-fit: contain;">
                     <span>Chat Flow</span>
                 </li>
             </a>
             <a [routerLink]="'/chatbot/bookings'">
                 <li (click)="setCurrentSubItem('Bookings')" [class.active]="currentSubItem === 'Bookings'"
                     class="sub_menu_item">
-                    <div class="icon">i</div>
+                    <img src="./icons/home.svg" style="height: 30px; width: 30px; object-fit: contain;">
                     <span>Bookings</span>
                 </li>
             </a>
             <a [routerLink]="'/chatbot/customers'">
                 <li (click)="setCurrentSubItem('Customers')" [class.active]="currentSubItem === 'Customers'"
                     class="sub_menu_item">
-                    <div class="icon">i</div>
+                    <img src="./icons/home.svg" style="height: 30px; width: 30px; object-fit: contain;">
                     <span>Customers</span>
                 </li>
             </a>
         </ul>
         <a [routerLink]="'/settings'">
             <li (click)="setCurrentItem('App')" [class.active]="currentItem === 'App'" class="menu_item">
-                <div class="icon">i</div>
+                <img src="./icons/home.svg" style="height: 30px; width: 30px; object-fit: contain;">
                 <span>App Settings</span>
             </li>
         </a>
         <a [routerLink]="'/profile'">
             <li (click)="setCurrentItem('Profile')" [class.active]="currentItem === 'Profile'" class="menu_item">
-                <div class="icon">i</div>
+                <img src="./icons/home.svg" style="height: 30px; width: 30px; object-fit: contain;">
                 <span>Profile</span>
             </li>
         </a>
