--- a/src/app/bookings/bookings.component.css
+++ b/src/app/bookings/bookings.component.css
@@ -183,3 +183,189 @@
     opacity: 1;
     pointer-events: all;
 }
+
+.booking_dets {
+    display: flex;
+    gap: 1rem;
+}
+
+.bd_left {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.bdl_top {
+    padding: 1rem;
+    background-color: white;
+    border-radius: .6rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.total {
+    display: flex;
+    flex-direction: column;
+    gap: .5rem;
+    padding: 1rem;
+    background-color: #EEEEEE;
+    border-radius: .3rem;
+}
+
+.total div {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.total div .badge {
+    font-size: .6rem;
+    padding: .3rem .6rem;
+}
+
+.total div span {
+    color: #737791;
+    font-size: .9rem;
+    font-weight: 400;
+}
+
+.total h3 {
+    font-size: 2rem;
+    color: #2EBC96;
+    font-weight: 400;
+}
+
+.bd_dets {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    background-color: #eee;
+    padding: 1rem;
+    border-radius: .3rem;
+}
+
+.bd_dets div {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
+}
+
+.bd_dets div span {
+    font-size: .88rem;
+    color: #737791;
+}
+
+.bd_dets div span:nth-child(1) {
+    font-weight: 500;
+}
+
+.bdl_bottom {
+    background-color: white;
+    padding: 1rem;
+    border-radius: .5rem;
+}
+
+.company_dets {
+    padding: 1rem;
+    background-color: #eee;
+    border-radius: .3rem;
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+}
+
+.dp {
+    height: 75px;
+    width: 75px;
+    border-radius: 45px;
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1rem;
+}
+
+.other_dets {
+    display: flex;
+    flex-direction: column;
+}
+
+.other_dets span {
+    font-size: .7rem;
+    font-weight: 300;
+    color: #737791;
+}
+
+.other_dets strong {
+    font-weight: 600;
+    font-size: 1.2rem;
+    color: #737791;
+}
+
+.bd_right {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1rem;
+    flex: 1;
+}
+
+.bdr_item {
+    padding: 1rem 1.5rem;
+    background-color: white;
+    border-radius: .5rem;
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+}
+
+.bdr_item:nth-child(7),
+.bdr_item:nth-child(8),
+.bdr_item:nth-child(9) {
+    grid-column: span 2;
+}
+
+.bdr_item strong {
+    flex: .6;
+    color: #737791;
+    font-size: .9rem;
+    font-weight: 600;
+}
+
+.bdr_item span {
+    flex: 1;
+    color: #737791;
+    font-size: .9rem;
+    font-weight: 400;
+}
+
+.bdr_item:nth-child(7) strong,
+.bdr_item:nth-child(8) strong,
+.bdr_item:nth-child(9) strong {
+    max-width: fit-content;
+    margin-right: 2rem;
+}
+
+.bdr_item textarea {
+    height: 100px;
+    width: 100%;
+    resize: none;
+    border: none;
+    outline: none;
+    border-radius: .6rem;
+    background-color: #eee;
+    padding: 1rem;
+}
+
+.booking_dets_wrapper {
+    display: grid;
+    overflow: hidden;
+    grid-template-rows: 0;
+    margin: -.5rem;
+}
+
+.booking_dets_wrapper.active {
+    grid-template-rows: 1fr;
+    margin: 0;
+}
