--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -6,6 +6,10 @@
 
 .body-content {
     flex: 1;
+    display: flex;
+    flex-direction: column;
+    max-width: 100%;
+    overflow: auto;
 }
 
 .main {
