--- a/src/app/customers/customers.component.css
+++ b/src/app/customers/customers.component.css
@@ -118,7 +118,7 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    min-width: 1500px;
+    min-width: 900px;
 }
 
 .table_header,
@@ -144,8 +144,193 @@
 .table_body .th_item {
     color: #737791;
     font-weight: 400;
+    font-size: 1rem;
 }
 
 .th_item:nth-child(1) {
     max-width: 30px;
+}
+
+.toggle_more {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 1rem;
+    padding: 1rem;
+    height: 35px;
+    width: 35px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: none;
+    outline: none;
+    background-color: white;
+    box-shadow: 0 0 10px #B3B3B380;
+    cursor: pointer;
+    opacity: 0;
+    pointer-events: none;
+    transition: 225ms;
+}
+
+.table_body:hover .toggle_more {
+    opacity: 1;
+    pointer-events: all;
+}
+
+.customer-details {
+    display: flex;
+    gap: 1.5rem;
+    padding: .75rem;
+    border-radius: .6rem;
+    background: #FFF;
+    box-shadow: 0px 5px 22px 0px rgba(225, 224, 224, 0.90);
+}
+
+.left {
+    padding: 1.5rem;
+    border-radius: .7rem;
+    background: #FFF;
+    box-shadow: 0px 5px 22px 0px rgba(238, 238, 238, 0.80);
+}
+
+.user-details {
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    border-radius: 8px;
+    background: #EEE;
+    min-width: 300px;
+}
+
+.ud-user {
+    display: flex;
+    gap: .7rem;
+    align-items: center;
+}
+
+.dp {
+    height: 60px;
+    width: 60px;
+    border-radius: 45px;
+    background: linear-gradient(to right, #2EBC96, #1A9096);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.5rem;
+    font-weight: 600;
+    color: white;
+}
+
+.udu-dets {
+    display: flex;
+    flex-direction: column;
+    color: #888;
+    leading-trim: both;
+    text-edge: cap;
+    font-family: Poppins;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 400;
+    letter-spacing: -0.36px;
+}
+
+.ud_other {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.ud_other div {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
+}
+
+.ud_other div span {
+    color: #888;
+    leading-trim: both;
+    text-edge: cap;
+    font-family: Poppins;
+    font-size: .88rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    letter-spacing: -0.32px;
+}
+
+.right {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1rem;
+    flex: 1;
+    height: fit-content;
+}
+
+.r_item {
+    border-radius: .5rem;
+    background: #FFF;
+    box-shadow: 0px 5px 22px 0px rgba(238, 238, 238, 0.80);
+    padding: 1rem 1.5rem;
+    color: #888;
+    leading-trim: both;
+    text-edge: cap;
+    font-family: Poppins;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    letter-spacing: -0.36px;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.r_item span {
+    font-weight: 400;
+}
+
+.r_item span,
+.r_item strong {
+    flex: 1;
+}
+
+.r_item:nth-child(3),
+.r_item:nth-child(4) {
+    grid-column: span 2;
+}
+
+.r_item:nth-child(3) strong,
+.r_item:nth-child(4) strong {
+    max-width: 160px;
+}
+
+.icons_badge {
+    display: flex;
+    gap: .75rem;
+    padding: .5rem .75rem;
+    border-radius: 310px;
+    background: #15BD4E;
+    width: fit-content;
+    margin: 0 auto;
+}
+
+.icons_badge button {
+    border: none;
+    outline: none;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.booking_dets_wrapper {
+    display: grid;
+    overflow: hidden;
+    grid-template-rows: 0;
+    margin: -.5rem;
+}
+
+.booking_dets_wrapper.active {
+    grid-template-rows: 1fr;
+    margin: 0;
 }
