updated folder structure

--- a/src/app/screens/login/login.component.css
+++ b/src/app/screens/login/login.component.css
@@ -8,7 +8,7 @@
 
 .left {
     flex: 1;
-    background: url(../../assets/img/login-bg.png);
+    background: url(../../../assets/img/login-bg.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: 129%;
