--- a/src/styles.css
+++ b/src/styles.css
@@ -30,17 +30,22 @@ body {
     }
 }
 
-/* 
-.iti {
-    height: 100%;
+::-webkit-scrollbar {
+    width: 3px;
+    height: 3px;
 }
 
-.custom {
-    border: none;
-    outline: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    width: 300px;
-} */
+::-webkit-scrollbar-thumb {
+    background-color: #11998E;
+    border-radius: 10px;
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #444;
+}
+
+::-webkit-scrollbar-track {
+    border-radius: 10px;
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
