--- a/src/app/screens/chat-flow/chat-flow.component.html
+++ b/src/app/screens/chat-flow/chat-flow.component.html
@@ -70,7 +70,10 @@
                     </div>
                 </div>
             </div>
-
+        </div>
+        <div class="zoom">
+            <button (click)="zoomOut()">-</button>
+            <button (click)="zoomIn()">+</button>
         </div>
     </div>
 </div>
