--- a/src/app/screens/chat-flow/chat-flow.component.css
+++ b/src/app/screens/chat-flow/chat-flow.component.css
@@ -53,6 +53,7 @@
     height: calc(100vh - 14rem);
     width: 100%;
     position: relative;
+    overflow: hidden;
 }
 
 .canvas {
@@ -366,4 +367,26 @@
 .ab_bot button img {
     width: 20px;
     height: 20px;
+}
+
+.zoom {
+    display: flex;
+    gap: 1rem;
+    height: fit-content;
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+}
+
+.zoom button {
+    height: 40px;
+    width: 40px;
+    background-color: white;
+    border: none;
+    outline: none;
+    box-shadow: -4px 5px 22px 0px rgba(212, 212, 212, 0.80);
+    cursor: pointer;
+    font-size: 1.25rem;
+    font-weight: 700;
+    border-radius: .5rem;
 }
