--- a/src/app/screens/home/home.component.html
+++ b/src/app/screens/home/home.component.html
@@ -6,6 +6,7 @@
     <div class="right">
 
         <app-stats></app-stats>
+        <!-- <app-doughnut-chart></app-doughnut-chart> -->
         <!-- devices -->
         <div class="devices">
             <div class="d_header">
