--- a/src/app/screens/home/home.component.css
+++ b/src/app/screens/home/home.component.css
@@ -1,18 +1,22 @@
 .container {
     display: flex;
     gap: 1.5rem;
-    /* padding: 1.5rem; */
-}
-
-.left {
-    flex: 5.8;
-    display: flex;
     flex-direction: column;
 }
 
-.right {
-    flex: 4.2;
-    min-width: 500px;
+.top {
+    display: flex;
+    gap: 1.5rem;
+}
+
+.reports {
+    flex: 1;
+    padding: .5rem;
+}
+
+.bottom {
+    display: flex;
+    gap: 1.5rem;
 }
 
 .devices {
@@ -21,6 +25,11 @@
     box-shadow: 1px 2px 5px 0px rgba(165, 165, 165, 0.34);
     padding: 1rem 1.5rem;
     margin-top: .7rem;
+    min-width: 411px;
+}
+
+.activity {
+    flex: 1;
 }
 
 .d_header {
@@ -108,6 +117,95 @@
 
 .mobile {
     display: none;
+}
+
+.bar-container {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    border-radius: 8.356px;
+    background: var(--Neutral-White, #FFF);
+    box-shadow: 0px 5px 22px 0px rgba(238, 238, 238, 0.50);
+    padding: 2rem;
+    min-width: 411px;
+}
+
+.bc-top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
+    margin-bottom: 1rem;
+}
+
+.bc-top h3 {
+    color: #030303;
+    font-family: Poppins;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 700;
+}
+
+.bc-top a {
+    display: flex;
+    align-items: center;
+    gap: .2rem;
+    color: var(--Diverging-Blue, #3B82F6);
+    font-family: "Plus Jakarta Sans";
+    font-size: .9rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 21.093px;
+    /* 142.857% */
+}
+
+.chart {
+    max-width: 300px;
+    margin: 0 auto;
+}
+
+.bc-table {
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    gap: 1rem;
+}
+
+.bct-item {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    color: #737791;
+    font-family: "Plus Jakarta Sans";
+    font-style: normal;
+    font-weight: 500;
+    font-size: .9rem;
+}
+
+.bct-item:nth-child(1) {
+    padding-bottom: 1rem;
+    border-bottom: 1px solid #D4D4D4;
+}
+
+.bct-item div:nth-child(2) {
+    width: 130px;
+}
+
+.bct-item div:nth-child(3) {
+    width: 70px;
+    text-align: right;
+}
+
+.bct-item div:nth-child(4) {
+    text-align: right;
+    width: 35px;
+}
+
+.dot {
+    height: 20px;
+    width: 20px;
+    background-color: var(--color);
+    border-radius: 15px;
 }
 
 @media screen and (max-width: 1500px) {
