--- a/src/app/screens/home/home.component.html
+++ b/src/app/screens/home/home.component.html
@@ -1,13 +1,59 @@
 <div class="container" *ngIf="isPcView">
-    <div class="left">
-        <app-reports></app-reports>
-        <app-activity-details></app-activity-details>
+    <div class="top">
+        <div class="reports">
+            <app-reports></app-reports>
+        </div>
+        <div class="bar-container">
+            <div class="bc-top">
+                <h3>Message Average</h3>
+                <a href="#">
+                    <span>
+                        View Details
+                    </span>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
+                        <path
+                            d="M3.73534 15.6402C3.45409 15.6402 3.208 15.5347 2.99707 15.3238C2.78613 15.1128 2.68066 14.8668 2.68066 14.5855V4.0388C2.68066 3.75756 2.78613 3.51147 2.99707 3.30053C3.208 3.0896 3.45409 2.98413 3.73534 2.98413H8.11222C8.26163 2.98413 8.38687 3.03496 8.48795 3.13662C8.58902 3.23829 8.63956 3.36426 8.63956 3.51454C8.63956 3.66483 8.58902 3.78978 8.48795 3.88939C8.38687 3.989 8.26163 4.0388 8.11222 4.0388H3.73534V14.5855H14.282V10.2086C14.282 10.0592 14.3329 9.93397 14.4345 9.8329C14.5362 9.73183 14.6622 9.68129 14.8125 9.68129C14.9627 9.68129 15.0877 9.73183 15.1873 9.8329C15.2869 9.93397 15.3367 10.0592 15.3367 10.2086V14.5855C15.3367 14.8668 15.2312 15.1128 15.0203 15.3238C14.8094 15.5347 14.5633 15.6402 14.282 15.6402H3.73534ZM6.91921 11.397C6.82394 11.2962 6.77337 11.1754 6.76751 11.0348C6.76166 10.8942 6.81146 10.7711 6.91693 10.6657L13.5438 4.0388H10.2216C10.0722 4.0388 9.94691 3.98797 9.84584 3.88631C9.74476 3.78464 9.69423 3.65867 9.69423 3.50839C9.69423 3.3581 9.74476 3.23315 9.84584 3.13354C9.94691 3.03393 10.0722 2.98413 10.2216 2.98413H14.8094C14.9588 2.98413 15.084 3.03467 15.1851 3.13574C15.2862 3.23681 15.3367 3.36205 15.3367 3.51147V8.09929C15.3367 8.2487 15.2859 8.37394 15.1842 8.47501C15.0826 8.57608 14.9566 8.62662 14.8063 8.62662C14.656 8.62662 14.5311 8.57608 14.4315 8.47501C14.3319 8.37394 14.282 8.2487 14.282 8.09929V4.79465L7.6552 11.4215C7.55627 11.5152 7.43486 11.5621 7.29097 11.5621C7.14707 11.5621 7.02316 11.5071 6.91921 11.397Z"
+                            fill="#3B82F6" />
+                    </svg>
+                </a>
+            </div>
+            <div class="chart">
+                <app-doughnut-chart [colors]="['#FF515C','#2EBC96', '#3B82F6']"
+                    [data]="[55, 30, 15]"></app-doughnut-chart>
+            </div>
+            <div class="bc-table">
+                <div class="bct-item">
+                    <div class="dot" style="color: white;">.</div>
+                    <div>Status</div>
+                    <div>issues</div>
+                    <div>%</div>
+                </div>
+                <div class="bct-item">
+                    <div class="dot" style="--color: #FF515C; color: #FF515C;">.</div>
+                    <div>Total sent sms</div>
+                    <div style="color:black;">1244</div>
+                    <div style="color:black;">55%</div>
+                </div>
+                <div class="bct-item">
+                    <div class="dot" style="--color: #2EBC96; color: #2EBC96;">.</div>
+                    <div>In Progress</div>
+                    <div style="color:black;">13</div>
+                    <div style="color:black;">30%</div>
+                </div>
+                <div class="bct-item">
+                    <div class="dot" style="--color: #3B82F6; color: #3B82F6;">.</div>
+                    <div>Done</div>
+                    <div style="color:black;">6</div>
+                    <div style="color:black;">15%</div>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="right">
-
-        <app-stats></app-stats>
-        <!-- <app-doughnut-chart></app-doughnut-chart> -->
-        <!-- devices -->
+    <!-- <app-stats></app-stats> -->
+    <div class="bottom">
+        <div class="activity">
+            <app-activity-details></app-activity-details>
+        </div>
         <div class="devices">
             <div class="d_header">
                 <h4>Devices</h4>
@@ -38,17 +84,11 @@
                     <span>Motorola Edge 30</span>
                     <div class="status" [class.active]="false"></div>
                 </div>
-                <div class="d_card">
-                    <div class="d_c_info">
-                        <img src="../../assets/icons/android.svg" alt="android">
-                        <span>Motorola</span>
-                    </div>
-                    <span>Motorola Edge 30</span>
-                    <div class="status" [class.active]="true"></div>
-                </div>
             </div>
         </div>
+
     </div>
+
 </div>
 
 <div class="mobile" *ngIf="!isPcView">
