--- a/src/app/screens/home/home.component.html
+++ b/src/app/screens/home/home.component.html
@@ -52,7 +52,84 @@
     <!-- <app-stats></app-stats> -->
     <div class="bottom">
         <div class="activity">
-            <app-activity-details></app-activity-details>
+            <div class="a_top">
+                <button>
+                    <span>All Messages</span>
+                </button>
+                <button class="filter">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="21" height="14" viewBox="0 0 21 14" fill="none">
+                        <path d="M2 1.79053H18.67M5.12556 6.9999H15.5443M9.29302 12.2093H11.3768" stroke="white"
+                            stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
+                    </svg>
+                    <span>Filters</span>
+                </button>
+            </div>
+            <div class="filters">
+                <button class="close"><svg xmlns="http://www.w3.org/2000/svg" width="13" height="13" viewBox="0 0 13 13"
+                        fill="none">
+                        <path d="M12.0278 11.6573L0.808298 1.34253M12.0278 1.34253L0.808298 11.6573" stroke="#2EBC96"
+                            stroke-width="1.60279" stroke-linecap="round" stroke-linejoin="round" />
+                    </svg></button>
+                <div class="left">
+                    <div class="inp_con">
+                        <label for="">Target</label>
+                        <select name="" id=""></select>
+                    </div>
+                    <div class="inp_con">
+                        <label for="">Target Type</label>
+                        <select name="" id=""></select>
+                    </div>
+                    <div class="inp_con">
+                        <label for="">Status</label>
+                        <select name="" id=""></select>
+                    </div>
+                    <div class="inp_con">
+                        <label for="">Send Via</label>
+                        <select name="" id=""></select>
+                    </div>
+                </div>
+                <video src="../../../assets/videos/search.mp4" autoplay="true" muted="true" loop="true"></video>
+            </div>
+            <div class="a_table_wrapper">
+                <div class="a_table">
+                    <div class="at_item">
+                        <div>Created At</div>
+                        <div>Target Type</div>
+                        <div>Target</div>
+                        <div>Message Type</div>
+                        <div>Sent Via</div>
+                        <div>Status</div>
+                        <div>Messages</div>
+                    </div>
+                    <div class="at_item">
+                        <div>Created At</div>
+                        <div>Target Type</div>
+                        <div>Target</div>
+                        <div>Message Type</div>
+                        <div>Sent Via</div>
+                        <div>Status</div>
+                        <div>Messages</div>
+                    </div>
+                    <div class="at_item">
+                        <div>Created At</div>
+                        <div>Target Type</div>
+                        <div>Target</div>
+                        <div>Message Type</div>
+                        <div>Sent Via</div>
+                        <div>Status</div>
+                        <div>Messages</div>
+                    </div>
+                    <div class="at_item">
+                        <div>Created At</div>
+                        <div>Target Type</div>
+                        <div>Target</div>
+                        <div>Message Type</div>
+                        <div>Sent Via</div>
+                        <div>Status</div>
+                        <div>Messages</div>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="devices">
             <div class="d_header">
